refactor: annotations update
